opravy cestina + dodani nocniho klidu

--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
         <p>V první řadě si chceme tento pro nás významný den s vámi všemi užít. Tudíž chceme, aby se každý cítil dobře a
             zvolil si oblečení na odpolední zábavu dle vašich představ,
             jen na obřad bychom rádi slušnější oděv.
-            Obřad budeme mít na starém nevyužívaném letišti, ale přesto bychom vás rádi požádali, aby jste se oblékli 
+            Obřad budeme mít na starém nevyužívaném letišti, ale přesto bychom vás rádi požádali, abyste se oblékli 
             slavnostně a slečny a ženy se vyhnuly bílým šatům, jak je na svatbách zvykem. Pokud si chcete
             vzít podpatky, tak to v nich zvládnete.
-            Budeme se pohybvat buď po asfaltu nebo potom v kulturním domě a okolí.
+            Budeme se pohybovat buď po asfaltu nebo potom v kulturním domě a okolí.
         </p>
 
         <p>Po obřadu bude následovat pár fotografíí. Nevěsta se v rychlosti převlékne a bude následovat "první tanec
@@ -216,10 +216,13 @@
             obřadu se můžete převléknout do čeho budete chtít. :-)
         </p>
 
-        <p>Dále prosíme aby nikdo neunášel nevěstu. Nevěsta by si tento den ráda užila s vámi a ne někde čekat než si
-            ženich všimne, že se zrovna nikde nebaví s kamarádkama, ale že je vlastně pryč.
+        <p>Dále prosíme, aby nikdo neunášel nevěstu. Nevěsta by si tento den ráda užila s vámi a ne někde čekat než si
+            ženich všimne, že se zrovna nikde nebaví s kamarádkami, ale že je vlastně pryč.
             Děkujeme moc za pochopení a těšíme se na vás všechny. :-)</p>
-        </p>
+
+        <p>Svatba se koná přímo ve vesnici Březno, přislíbili jsme noční klid po 10 hodině večerní, takže prosíme, abyste po 22. hodině drželi zábavu uvnitř kulturního domu za zavřenými dveřmi a nikoli venku nebo v okolí stanů.</p>
+
+        <p>Děkujeme za Vaše pochopení a těšíme se na pohodovou svatbu.</p>
     </div>
 
     <div class="image-line-container">
@@ -289,30 +292,30 @@
     </div>
 
     <div id="mista" class="background-section">
-    <div class="container">
-        <h1 id="mista">Důležitá místa</h1>
         <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-md-4 card">
-                <h2>Obřad</h2>
-                <h3>Letiště Březno u Chomutova</h3>
-                <p><a href="https://maps.app.goo.gl/9jfQ5de7FyQrpeL88" target="_blank">
-                    <i class="fas fa-map-marked-alt"></i>
-                  </a></p>
-                  <p>431 44 Droužkovice</p>
-                <p>Své ano si řekneme na místě, kde trávíme hodiny a hodiny se svými motorkami. Po obřadu bude i malé ježdění.</p>
-              </div>
-              <div class="col-md-4 card">
-                <h2>Hostina</h2>
-                <h3>Kulturní dům Březno</h3>
-                <p><a href="https://maps.app.goo.gl/jB1rq45qPXfjFhFp7" target="_blank">
-                    <i class="fas fa-map-marked-alt"></i>
-                  </a></p>
-                <p>Gen. Svobody 431, 431 45 Březno u Chomutova</p>
-                <p>Po obřadu a malém ježdění se přesuneme do Kulturního domu ve vesnici Březno. Tam již bude celý další program.</p>
-              </div>
+            <h1 id="mista">Důležitá místa</h1>
+            <div class="container">
+                <div class="row justify-content-center">
+                <div class="col-md-4 card">
+                    <h2>Obřad</h2>
+                    <h3>Letiště Březno u Chomutova</h3>
+                    <p><a href="https://maps.app.goo.gl/9jfQ5de7FyQrpeL88" target="_blank">
+                        <i class="fas fa-map-marked-alt"></i>
+                    </a></p>
+                    <p>431 44 Droužkovice</p>
+                    <p>Své ano si řekneme na místě, kde trávíme hodiny a hodiny se svými motorkami. Po obřadu bude i malé ježdění.</p>
+                </div>
+                <div class="col-md-4 card">
+                    <h2>Hostina</h2>
+                    <h3>Kulturní dům Březno</h3>
+                    <p><a href="https://maps.app.goo.gl/jB1rq45qPXfjFhFp7" target="_blank">
+                        <i class="fas fa-map-marked-alt"></i>
+                    </a></p>
+                    <p>Gen. Svobody 431, 431 45 Březno u Chomutova</p>
+                    <p>Po obřadu a malém ježdění se přesuneme do Kulturního domu ve vesnici Březno. Tam již bude celý další program.</p>
+                </div>
+                </div>
             </div>
-          </div>
         </div>
     </div>
 
@@ -324,16 +327,16 @@
 
     <div class="container">
         <h1 id="mista">Spaní</h1>
-        <p>Přespání jsme pro vás zařídilí trošku punkovějšího rázu a proto necháme na vás, kdo toto přespání využije a kdo ne. 
+        <p>Přespání jsme pro vás zařídilí trošku punkovějšího rázu, a proto necháme na vás, kdo toto přespání využije a kdo ne. 
             Domluvili jsme louku, která je hned vedle kulturního domu. Na louce bude možné si postavit stan a přespat v něm. 
             Je také možné tam spát pod širákem apod. Ve chvíli, kdy odejdeme všichni z kulturního domu, tak kulturní dům se musí zamknout, 
-            ale budou otevřeny celou noc nově zrekontstruované veřejné záchody ihned vedle kulturního domu. Sprchy bohužel zajistit nedokážeme, tak to snad jednu noc zvládneme. ;-) 
+            ale budou otevřeny celou noc nově zrekonstruované veřejné záchody ihned vedle kulturního domu. Sprchy bohužel zajistit nedokážeme, tak to snad jednu noc zvládneme. ;-) 
         </p>
         <p>Samozřejmě je možné přespat i ve svém autě. Bohužel nevím, kolik přijede aut a kolik bude volných parkovacích míst, která jsou přímo přilehlá. 
             Tudíž prosím vyplňte do formuláře jak a v čem byste chtěli přespat a my podle toho zkusíme zařídit i bližší parkování pro spáče na místě.
         </p>
         <p>V Březně bohužel není žádné ubytovací zařízení. Nejbližší hotely a penziony jsou v Chomutově. Budeme mít zařízený odvoz do Chomutova a okolí, 
-            takže se nemusíte bát, že byste se nemohli dostat zpět na místo svého přespání pokud byste se rozhodli zamluvit si hotel.
+            takže se nemusíte bát, že byste se nemohli dostat zpět na místo svého přespání, pokud byste se rozhodli zamluvit si hotel.
         </p>
     </div>
 
@@ -358,12 +361,12 @@
     </div>
 
     <div class="container">
-        <h1 id="vase-ucast">Svatební dary</h1>
+        <h1 id="svatebni-dary">Svatební dary</h1>
         <p>Svatebčané naši milí, dovolte nám prosbičku,
             raději než věcné dary, naplňte nám kasičku.
             Mnohokrát Vám děkujeme za každičký halíř,
             stokrát lepší než nést domů stodesátý talíř.</p>
-        <p>Abychom vám to co nejvíce usnadnili a navíc se rádi držíme s dobou, tak jsme pro vás vytvořili QR kódy pro platbu. Budou i na místě svatby. 
+        <p>Abychom vám to co nejvíce usnadnili, a navíc se rádi držíme s dobou, tak jsme pro vás vytvořili QR kódy pro platbu. Budou i na místě svatby. 
             Každopádně do poznámky platby nám můžete napsat cokoli. :-)</p>
         <div class="container">
             <div class="row justify-content-center">
@@ -394,7 +397,7 @@
     <div class="container last-component">
         <h1 id="lide">Důležití lidé</h1>
         <p>Rádi bychom vám představili osoby, které jsou naprosto úžasné a pomáhají nám s organizací svatby a v den svatby budou mít vše na starosti. Děkujeme moc Lucce a Zdendovi.</p>
-        <p>Každopádně před svatbou si většinu věcí zařizujeme sami, tak prosím pište případně mě. Ať nezatěžujeme Lucku a Zdendu dokud to nebude nutné. 
+        <p>Každopádně před svatbou si většinu věcí zařizujeme sami, tak prosím pište případně mně. Ať nezatěžujeme Lucku a Zdendu, dokud to nebude nutné. 
             V den svatby již ideálně nic řešit nebudu. Děkuju moc za pochopení. </p>
         <div class="container">
             <div class="row justify-content-center">
