--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         </div>
     </nav>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <!-- Desktop Carousel -->
+    <div id="carouselExampleIndicators" class="carousel slide desktop-carousel" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -173,6 +174,51 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <!-- Mobile Carousel -->
+    <div id="carouselExampleIndicatorsMobile" class="carousel slide mobile-carousel" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/wheelie.jpg" class="d-block" alt="...">
+                <div class="carousel-caption d-none">
+                    <h5 class="carousel-caption-heading-mobile">Kuba & Katka</h5>
+                    <div>svatba 27.7.2024</div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/stoppie.JPG" class="d-block" alt="...">
+                <div class="carousel-caption d-none">
+                    <h5 class="carousel-caption-heading-mobile">Kuba & Katka</h5>
+                    <div>svatba 27.7.2024</div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/pusa.jpg" class="d-block" alt="...">
+                <div class="carousel-caption d-none">
+                    <h5 class="carousel-caption-heading-mobile">Kuba & Katka</h5>
+                    <div>svatba 27.7.2024</div>
                 </div>
             </div>
         </div>
