formulare oprava a obrazky, zarovnani kraje

--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@
         <p>Prosím o vyplnění krátkého dotazníku. Moc mi to pomůže s organizací a plánováním, abychom pro vás mohli udělat maximum.</p>
 
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc__HL2iaj_cudZKx_RDmdtvud2BebO2COc2t1ip4omNkXpvw/viewform?embedded=true" 
-        width="640" height="1200" frameborder="0" marginheight="0" marginwidth="0">Načítání…</iframe>
+        style="width: 100%; max-width: 640px; height: 1300px; border: 0; overflow: hidden;"
+        frameborder="0" marginheight="0" marginwidth="0">Načítání…</iframe>
     </div>
 
     <div class="image-line-container">
