uprava mista jeste

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="carousel-item active">
                 <img src="images/wheelie.jpg" class="d-block" alt="...">
                 <div class="carousel-caption d-none">
-                    <h5 class="carousel-caption-heading-mobile">Kuba & Katka</h5>
+                    <span class="carousel-caption-heading-mobile">Kuba & Katka</span>
                     <div>svatba 27.7.2024</div>
                 </div>
             </div>
