--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
     <!-- Mobile Carousel -->
     <div id="carouselExampleIndicatorsMobile" class="carousel slide mobile-carousel" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            <button type="button" data-bs-target="#carouselExampleIndicatorsMobile" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            <button type="button" data-bs-target="#carouselExampleIndicatorsMobile" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            <button type="button" data-bs-target="#carouselExampleIndicatorsMobile" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/stoppie.JPG" class="d-block" alt="...">
+                <img src="images/gumovacka-spolecna.jpg" class="d-block" alt="...">
                 <div class="carousel-caption d-s-block">
                     <h5 class="carousel-caption-heading">Kuba & Katka</h5>
                     <div>se budou brát 27. července 2024</div>
@@ -264,12 +264,12 @@
                 </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsMobile"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsMobile"
             data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
