cislo na zdendu

--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
                 <p>Lucie a Zdeněk jsou naši svatební koordinátoři. Mají vše na starosti v den svatby a hodně věcí nám pomáhájí zařizovat. 
                     Děkujeme vám za pomoc a podporu.</p>
                 <p>E-mail: lucie.hankova@zsduhovacesta.cz</p>
+                <p>Telefon na Zdendu: +420 602 566 030</p>
               </div>
             </div>
         </div>
