--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
     <div class="container">
         <h1 id="program">Program</h1>
-        <p>Je možné, že program ještě trochu upravíme, tak jej doporučujeme průběžně sledovat! A ještě se může i v průběhu svatby měnit. :-D Určitě se taky
+        <p>Je pravděpodobné, že program ještě trochu upravíme, tak doporučuji program zkontrolovat pár dní před svatbou. Ještě se může i v průběhu svatby měnit. :-D Určitě se taky
             můžete těšit na překvapení 😉</p>
         <div class="timeline">
             <div class="timeline-icon"><i class="far fa-calendar-alt fa-2xl"></i></div>
@@ -349,10 +349,6 @@
                     <div class="event">
                         <h2>Krájení dortu</h2>
                         <p class="time">16:00</p>
-                    </div>
-                    <div class="event">
-                        <h2>První tanec</h2>
-                        <p class="time">17:00</p>
                     </div>
                     <div class="event">
                         <h2>Večerní program</h2>
