--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
     <div class="container" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
         <h1 id="vase-ucast">Vaše účast</h1>
         <p>Prosím o vyplnění krátkého dotazníku. Moc mi to pomůže s organizací a plánováním, abychom pro vás mohli udělat maximum.</p>
+        <p>Prosím o vyplnění tohoto formuláře ideálně do konce května. Pokud si zatím nejste jisti, zda vám něco do tohoto datumu nepřijde, tak prosím formulíř vyplňte jakobyste přišli a prosím nejpozději 3 týdny před svatbou mi dejte vědět, že nebudete moci dorazit. Děkuju moc. :-)</p>
 
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc__HL2iaj_cudZKx_RDmdtvud2BebO2COc2t1ip4omNkXpvw/viewform?embedded=true" 
         style="width: 100%; max-width: 640px; height: 1300px; border: 0; overflow: hidden;"
